--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         // Specify the label or name of the node where you want to run the pipeline
         node {
-            label 'your-node-label'
+            label 'Harish-test-machine'
         }
     }
 
