--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
 
         stage('Build and Test') {
             steps {
-                sh 'sudo mvn install'
+                sh 'mvn install'
             }
         }
 
