--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
 
        stage('Deploy') {
             steps {
-                   sh 'java -jar target/your-application.jar'
+                   sh 'java -jar /home/ubuntu/workspace/Spring-boot/target/spring-boot-mysql-0.0.1-SNAPSHOT.jar'
             }
         }
     }
