--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,17 +26,16 @@ pipeline {
         }
        stage ('service check') {
           steps {
-            sh 'chmod +x ./wrapper.sh'
+            sh 'chmod +x wrapper.sh'
+            sh 'chmod +x service.sh'
            }
 
        }
 
        stage('Deploy') {
             steps {
-                   sh 'sudo cp -r ${WORKSPACE}/service/Harish.service /etc/systemd/system/'
-                   sh 'sudo systemctl enable Harish.service'
-                   sh 'sudo systemctl start Harish.service'
-            }
+               sh './service.sh'
+             }
         }
     }
 
